# crewai

./: README.md  pyproject.toml  report.md
src/stock_analyst/: crew.py  main.py
src/stock_analyst/config/: agents.yaml  tasks.yaml
src/stock_analyst/tools/: stock_data_tool.py
