[project]
name = "stock_analyst"
version = "0.1.0"
description = "stock-analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "yfinance>=0.2.50",
]

[project.scripts]
stock_analyst = "stock_analyst.main:run"
run_crew = "stock_analyst.main:run"
train = "stock_analyst.main:train"
replay = "stock_analyst.main:replay"
test = "stock_analyst.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
